--- a/index.html
+++ b/index.html
@@ -413,8 +413,10 @@
                         <div class="card-body pb-4 px-4" style=" border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
                             <h5 class="text-light workSans" style="font-size: 22px; background: none;">Sunset Dimension</h5>
                             <div style="background: none;">
-                                <img src="Animakid Avatar.png" class="me-2" style="width: 24px; height: 24px;">
-                                <span class="text-light workSans" style="font-weight: 400;">Animakid</span>
+                                <a href="https://animakid2.vercel.app/" class="text-decoration-none">
+                                    <img src="Animakid Avatar.png" class="me-2" style="width: 24px; height: 24px;">
+                                    <span class="text-light workSans" style="font-weight: 400;">Animakid</span>
+                                </a>
                             </div>
                         <div class="row pt-3" style="background: none;">
                             <div class="col-6" style="background: none;">
